--- a/elements/create_account.html
+++ b/elements/create_account.html
@@ -6,6 +6,6 @@
       </h1>
     </gaia-header>
 
-    <ol id="create-account-presets" class="link-list"></ol>
+    <ol id="create-account-presets" class="link-list" role="listbox"></ol>
   </template>
 </element>
