--- a/elements/modify_account.html
+++ b/elements/modify_account.html
@@ -5,36 +5,36 @@
       <button class="save" data-l10n-id="save">Save</button>
     </gaia-header>
 
-    <section class="during-progress">
+    <section class="during-progress" aria-live="assertive" aria-atomic="true">
       <div>
-        <progress class="small"></progress>
+        <progress class="small" data-l10n-id="during-progress-loading"></progress>
         <span data-l10n-id="modify-account-setting-up">SeTtiNg uP ACcOunt</span>
       </div>
     </section>
 
-    <form>
+    <form class="modify-account-form">
       <fieldset>
-        <ol>
-          <li class="user">
+        <ol role="presentation">
+          <li class="user" role="presentation">
             <input name="user" data-l10n-id="field-user" x-inputmode="verbatim" placeholder="Username" />
           </li>
-          <li class="password">
+          <li class="password" role="presentation">
             <input name="password" data-l10n-id="field-password" placeholder="Password" type="password" />
           </li>
-          <li class="full-url">
+          <li class="full-url" role="presentation">
             <input name="fullUrl"
               type="url"
               data-l10n-id="field-full-url"
               placeholder="URL" />
 
           </li>
-          <li class="sync-errors">
+          <li class="sync-errors" role="presentation">
             <p data-l10n-id="modify-account-unable-to-sync">>uNaBle to SynC</p>
           </li>
-          <li class="oauth2-sign-in">
+          <li class="oauth2-sign-in" role="presentation">
             <button data-l10n-id="modify-account-sign-in" class="force-oauth2"></button>
           </li>
-          <li>
+          <li role="presentation">
             <a data-l10n-id="remove-account-data" role="button" href="#remove-account-dialog" class="danger delete-record bb-button">
               Remove Local Data
             </a>
@@ -43,7 +43,7 @@
       </fieldset>
     </form>
 
-    <section role="status">
+    <section role="status" aria-live="assertive" aria-atomic="true">
       <p class="errors"></p>
     </section>
 
