--- a/elements/modify_event.html
+++ b/elements/modify_event.html
@@ -27,29 +27,29 @@
         </li>
 
         <li class="start-date">
-          <span class="button icon icon-dialog">
-            <input name="startDate" data-l10n-id="event-start-date" placeholder="Date" type="date" class="hidden-input" />
+          <span class="button icon icon-dialog" role="combobox" aria-autocomplete="none" data-l10n-id="start-date">
+            <input name="startDate" data-l10n-id="event-start-date" placeholder="Date" type="date" class="hidden-input" aria-hidden="true"/>
             <span class="datetime" id="start-date-locale"></span>
           </span>
         </li>
 
         <li class="start-time">
-          <span class="button icon icon-dialog">
-            <input type="time" data-l10n-id="event-start-time" placeholder="Start Time" name="startTime" class="hidden-input" />
+          <span class="button icon icon-dialog" role="combobox" aria-autocomplete="none" data-l10n-id="start-time">
+            <input type="time" data-l10n-id="event-start-time" placeholder="Start Time" name="startTime" class="hidden-input" aria-hidden="true"/>
             <span class="datetime" id="start-time-locale"></span>
           </span>
         </li>
 
         <li class="end-date">
-          <span class="button icon icon-dialog">
-            <input name="endDate" data-l10n-id="event-end-date" placeholder="Date" type="date" class="hidden-input" />
+          <span class="button icon icon-dialog" role="combobox" aria-autocomplete="none" data-l10n-id="end-date">
+            <input name="endDate" data-l10n-id="event-end-date" placeholder="Date" type="date" class="hidden-input" aria-hidden="true"/>
             <span class="datetime" id="end-date-locale"></span>
           </span>
         </li>
 
         <li class="end-time">
-          <span class="button icon icon-dialog">
-            <input type="time" data-l10n-id="event-end-time" placeholder="End Time" name="endTime" class="hidden-input" />
+          <span class="button icon icon-dialog" role="combobox" aria-autocomplete="none" data-l10n-id="end-time">
+            <input type="time" data-l10n-id="event-end-time" placeholder="End Time" name="endTime" class="hidden-input" aria-hidden="true"/>
             <span class="datetime" id="end-time-locale"></span>
           </span>
         </li>
@@ -68,7 +68,7 @@
         </li>
 
         <li>
-          <h3 data-l10n-id="remind-me">Remind me</h3>
+          <h3 data-l10n-id="remind-me" role="heading" aria-level="2">Remind me</h3>
           <div class="alarms">
           </div>
         </li>
