Bug 1095738 - [Calendar] rename the MonthsDay view

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
   When a day is selected you have
   access to the details here
   -->
-  <section id="months-day-view" role="tabpanel">
+  <section id="month-day-agenda" role="tabpanel">
     <div id="event-list-date"></div>
     <div id="empty-message" data-l10n-id="no-events" class="active">No Events</div>
     <section id="event-list" class="day-events" role="listbox" aria-labelledby="event-list-date">
