Bug 1069214 - added accessibility improvements for day/week view.

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
 <section id="time-views" role="region">
   <gaia-header id="time-header" action="menu">
-    <h1 id="current-month-year"></h1>
+    <h1 id="current-month-year" aria-labelledby="current-time-indicator"></h1>
     <a href="/event/add/" data-icon="add">
       <span data-l10n-id="new-event">Add Event</span>
     </a>
