Bug 1115807 - Migrate all HTML files from manifest.webapp to <meta> l10n

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 <link rel="stylesheet" type="text/css" href="/style/building_blocks.css">
 
 <!-- localization -->
-<link rel="manifest" href="manifest.webapp">
+<meta name="defaultLanguage" content="en-US">
+<meta name="availableLanguages" content="ar, en-US, fr, zh-TW">
 <link rel="localization" href="locales/calendar.{locale}.properties">
 <link rel="localization" href="/shared/locales/date/date.{locale}.properties">
 <script defer src="/shared/js/date_time_helper.js"></script>
