Bug 1118315 - [Calendar] Remove strings from index.html r=kgrandon

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
   <gaia-header id="time-header" action="menu">
     <h1 id="current-month-year" aria-labelledby="current-time-indicator"></h1>
     <a href="/event/add/" data-icon="add">
-      <span data-l10n-id="new-event">Add Event</span>
+      <span data-l10n-id="new-event"></span>
     </a>
   </gaia-header>
 
@@ -87,7 +87,7 @@
   -->
   <section id="month-day-agenda" role="tabpanel">
     <div id="event-list-date"></div>
-    <div id="empty-message" data-l10n-id="no-events" class="active">No Events</div>
+    <div id="empty-message" data-l10n-id="no-events" class="active"></div>
     <section id="event-list" class="day-events" role="listbox" aria-labelledby="event-list-date">
     </section>
   </section>
@@ -100,9 +100,9 @@
     <li class="today" role="presentation">
       <a id="today" href="#today" data-l10n-id="present"><span class="gaia-icon icon-calendar-today"></span></a>
     </li>
-    <li class="month" role="presentation"><a role="tab" aria-selected="true" aria-controls="month-view" id="month" data-l10n-id="show-month-view" href="/month/">Month</a></li>
-    <li class="week" role="presentation"><a role="tab" aria-selected="false" aria-controls="week-view" id="week" data-l10n-id="show-week-view" href="/week/">Week</a></li>
-    <li class="day" role="presentation"><a role="tab" aria-selected="false" aria-controls="day-view" id="day" data-l10n-id="show-day-view" href="/day/">Day</a></li>
+    <li class="month" role="presentation"><a role="tab" aria-selected="true" aria-controls="month-view" id="month" data-l10n-id="show-month-view" href="/month/"></a></li>
+    <li class="week" role="presentation"><a role="tab" aria-selected="false" aria-controls="week-view" id="week" data-l10n-id="show-week-view" href="/week/"></a></li>
+    <li class="day" role="presentation"><a role="tab" aria-selected="false" aria-controls="day-view" id="day" data-l10n-id="show-day-view" href="/day/"></a></li>
   </ul>
 </section>
 
