CORE-1409: Change apps theme path for loading theme selected by settings app. r=me

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 <script defer src="shared/component_utils/component_utils.js"></script>
 <script defer src="shared/gaia_subheader/script.js"></script>
 <script defer src="shared/config/config.js"></script>
-<link rel="stylesheet" type="text/css" href="app://theme.gaiamobile.org/shared/gaia-theme/gaia-theme.css" />
+<link rel="stylesheet" type="text/css" href="app://theme.gaiamobile.org/theme.css" />
 <script defer src="shared/gaia-header/dist/gaia-header.js"></script>
 <link rel="stylesheet" type="text/css" href="app://theme.gaiamobile.org/shared/gaia-theme/style.css" />
 <!-- Icons are lazy loaded by gaia-header -->
