--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
 
 <script defer src="/js/bundle.js"></script>
 
+<!-- Navigation support -->
+<link rel="stylesheet" type="text/css" href="style/navigation.css">
+
 <link rel="import" href="/elements/errors.html">
 <link rel="import" href="/elements/lazy_styles.html">
 <link rel="import" href="/elements/advanced_settings.html">
