CORE-1979: Handle soft key in advanced settings page. r=arthur, jianmin

--- a/elements/advanced_settings.html
+++ b/elements/advanced_settings.html
@@ -29,7 +29,7 @@
       </gaia-subheader>
 
       <ol class="settings-list link-list" role="presentation">
-        <li role="presentation" tabIndex="0">
+        <li class="sk-advs-sync-frequency" role="presentation" tabIndex="0">
           <label>
             <span data-l10n-id="sync-frequency">Sync Calendar</span>
             <span class="button icon icon-dialog">
@@ -48,13 +48,13 @@
       </gaia-subheader>
 
       <ol class="settings-list link-list" role="presentation">
-        <li role="presentation" tabIndex="0">
+        <li class = "sk-advs-event-alarm" role="presentation" tabIndex="0">
           <label id="default-event-alarm">
             <span data-l10n-id="events">Events</span>
             <span class="button icon icon-dialog" nav-scope nav-ignore></span>
           </label>
         </li>
-        <li role="presentation" tabIndex="0">
+        <li class = "sk-advs-allday-alarm" role="presentation" tabIndex="0">
           <label id="default-allday-alarm">
             <span data-l10n-id="allday-events">All-day Events</span>
             <span class="button icon icon-dialog" nav-scope nav-ignore></span>
