--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
 <script defer src="/shared/date_time_helper/date_time_helper.js"></script>
 <script defer src="/shared/l10n/l10n.js"></script>
 <script defer src="/shared/l10n_date/l10n_date.js"></script>
+<script defer src="/shared/soft_keys_helper/soft_keys_helper.js"></script>
+<script defer src="/js/softkey/element_softkeys_map_helper.js"></script>
+<script defer src="/js/softkey/softkey_handler_helper.js"></script>
 
 <!-- The following scripts are lazy loaded but left here to ensure
      they get copied over from shared during the build -->
