CORE-2114: Change the theme for Calendar app. r=jianmin

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 
 <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1">
 <meta charset="utf-8">
-<meta name="theme-color" content="#ff7d14">
 <title>Calendar</title>
 
 <!-- stylesheets -->
@@ -72,7 +71,7 @@
 
 </head>
 
-<body role="application" class="loading theme-productivity">
+<body role="application" class="loading theme-calendar">
 
 <section is="errors" id="errors" role="status" aria-live="assertive" aria-atomic="true"></section>
 <section is="settings" id="settings" role="region"></section>
