CORE-2015: Add H5OptionMenu for Monthly View. r=jianmin-zhou, arthur

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 
 <!-- Web Components -->
 <script defer src="shared/gaia-component/gaia-component.js"></script>
+<script defer src="shared/h5-one-line-li/h5-one-line-li.js"></script>
 <script defer src="shared/component_utils/component_utils.js"></script>
 <script defer src="shared/gaia_subheader/script.js"></script>
 <script defer src="shared/config/config.js"></script>
@@ -120,6 +121,8 @@
 <section is="show-event" class="fullscreen-view" id="event-view" role="region"></section>
 <section is="oauth" class="fullscreen-view skin-dark" id="oauth2" role="region"></section>
 <section is="modify-account" class="fullscreen-view skin-organic" id="modify-account-view" role="region"></section>
-
+<section id="h5-option-menu-border">
+  <h5-option-menu tabIndex="0"></h5-option-menu>
+</section>
 </body>
 </html>
