CORE-2168: Add a new page for event list. r=jianmin

--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
 <link rel="import" href="/elements/settings.html">
 <link rel="import" href="/elements/show_event.html">
 <link rel="import" href="/elements/multi_day.html">
+<link rel="import" href="/elements/event_list.html">
 
 </head>
 
@@ -121,6 +122,8 @@
 <section is="advanced-settings" class="fullscreen-view in-progress theme-calendar" role="region" id="advanced-settings-view"
   nav-scope nav-loop nav-ignore tabIndex="0"></section>
 <section is="modify-event" class="fullscreen-view" id="modify-event-view" role="region"></section>
+<section is="event-list" class="fullscreen-view theme-calendar" id="event-list-view" role="region"
+  nav-scope nav-loop nav-ignore tabIndex="0"></section>
 <section is="show-event" class="fullscreen-view" id="event-view" role="region"></section>
 <section is="oauth" class="fullscreen-view skin-dark" id="oauth2" role="region"></section>
 <section is="modify-account" class="fullscreen-view skin-organic" id="modify-account-view" role="region"></section>
