--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
   nav-scope nav-loop nav-ignore tabIndex="0"></section>
 <section is="modify-event" class="fullscreen-view in-progress theme-calendar" id="modify-event-view" role="region"
   nav-scope nav-loop nav-ignore tabIndex="0"></section>
-<section is="event-list" class="fullscreen-view theme-calendar" id="event-list-view" role="region"
+<section is="events-list" class="fullscreen-view theme-calendar" id="events-list-view" role="region"
   nav-scope nav-loop nav-ignore tabIndex="0"></section>
 <section is="show-event" class="fullscreen-view" id="event-view" role="region"></section>
 <section is="oauth" class="fullscreen-view skin-dark" id="oauth2" role="region"></section>
@@ -142,5 +142,6 @@
 <section id="h5-option-menu-border">
   <h5-option-menu tabIndex="0"></h5-option-menu>
 </section>
+
 </body>
 </html>
