--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
 <link rel="import" href="/elements/show_event.html">
 <link rel="import" href="/elements/multi_day.html">
 <link rel="import" href="/elements/event_list.html">
+<link rel="import" href="/elements/event_detail.html">
 
 </head>
 
@@ -127,6 +128,8 @@
 <section is="show-event" class="fullscreen-view" id="event-view" role="region"></section>
 <section is="oauth" class="fullscreen-view skin-dark" id="oauth2" role="region"></section>
 <section is="modify-account" class="fullscreen-view skin-organic" id="modify-account-view" role="region"></section>
+<section is="event-detail" class="fullscreen-view theme-calendar" id="event-detail-view" role="region"
+  nav-scope nav-loop nav-ignore tabIndex="0"></section>
 <section id="h5-option-menu-border">
   <h5-option-menu tabIndex="0"></h5-option-menu>
 </section>
